# document-analyzer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  d3_tree.html  d3_tree_generator.py  d3_tree_visualizer.html  doc_analyzer.py  document_mindmap.puml  graph_visualizer.py  main.py  md_tree_visualizer.py  pyproject.toml  simple_tree_visualizer.py  static_tree_visualizer.py
.github/workflows/: test.yml
