[project]
name = "doc-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "pathlib>=1.0.1",
    "rich>=14.0.0",
    "scipy>=1.16.0",
]
